# gptload-rs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  TODO.md  config.example.toml  docker-build.sh  docker-compose.yml  loadtest.py  test_models_availability.py  test_perf.py  test_perf_extended.py
.github/workflows/: docker.yml  rust.yml  rust_release.yml
src/: admin.rs  billing.rs  config.rs  format.rs  main.rs  proxy.rs  route.rs  state.rs  storage.rs  upstream_client.rs  util.rs
src/admin/: keys.rs  mod.rs  stats.rs  upstreams.rs
src/format/: mod.rs  request.rs  response.rs
src/proxy/: forward.rs  mod.rs  response.rs  server.rs  usage.rs
src/state/: mod.rs  requests.rs  routes.rs  upstream.rs
src/static/: app.js  index.html
tests/: test_models_availability.py  test_specific_models.py
tmp/: test_config.toml
