[package]
name = "gptload-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "High-performance OpenAI-format transparent proxy with multi-upstream + multi-key load balancing, admin API/UI, hot key reload, and realtime stats."

[features]
mimalloc = ["dep:mimalloc"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ahash = "0.8"
arc-swap = "1"
flate2 = "1"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
mimalloc = { version = "0.1", optional = true }

# 优化编译配置
[profile.release]
opt-level = 3              # 最高优化级别
lto = true                 # 链接时优化 (LTO)
codegen-units = 1         # 单线程编译 (更好的优化但更慢)
strip = true              # 移除调试符号

[profile.release-fast]
inherits = "release"
lto = "thin"               # 轻量级LTO (更快的链接)
codegen-units = 256        # 多线程编译 (更快的编译)
